<resources>
    <string name="app_name">Link Development</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="live_chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="magazine">Magazine</string>
    <string name="wish_list">Wish List</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="article">Article</string>
    <string name="error">Something went wrong,Please try again.</string>
    <string name="by">By %s</string>
    <string name="open_website">Open Website</string>
    <string name="tony_roshdy">Tony Roshdy</string>
</resources>
