<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_live_chat"
            android:icon="@drawable/ic_live"
            android:title="@string/live_chat" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_wishlist"
            android:title="@string/wish_list" />

        <item
            android:id="@+id/nav_magazine"
            android:icon="@drawable/ic_magazine"
            android:title="@string/magazine" />
    </group>

</menu>
